fix: Resolve image overlapping issues and section layering

--- a/style.css
+++ b/style.css
@@ -119,7 +119,9 @@ width: 100%;
 /*About */
 #about{
     padding:80px 0;
-    color: #ababab
+    color: #ababab;
+    
+    
 }
 
 .row{
@@ -520,24 +522,44 @@ nav .fa-solid{
     display: none;
 }
 @media only screen and (max-width: 600px){
-    #header{
-        background-image: url('images/background-phone.jpg');
+    
+    /* Header Section */
+    .header-text {
+        margin-top: 50%;
+        flex-direction: column;
+        text-align: center;
     }
 
-    .header-text{
-        margin-top: 100%;
-        font-size: 16px;
-    }
-
-    .header-text h1{
+    .text-content p {
         font-size: 30px;
     }
 
-    nav .fa-solid{
+    .text-content h1 {
+        font-size: 35px;
+    }
+
+    .profile-image {
+        width: 450px; 
+        height: 450px; 
+        border: 2px solid #00ff00; 
+        border-radius: 10px;
+        overflow: hidden;
+        position: relative;
+        z-index: 2; 
+    }
+
+    .profile-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    /* Navigation */
+    nav .fa-solid {
         display: block;
         font-size: 25px;
-        margin-bottom: 15px;
     }
+
 
     nav ul{
         background: #32CD32;
@@ -548,7 +570,7 @@ nav .fa-solid{
         height: 100vh;
         padding-top: 50px;
         z-index: 2;
-        transition: right;
+        transition: right 0.5s;
     }
     nav ul li{
         display: block;
@@ -562,19 +584,91 @@ nav .fa-solid{
         cursor: pointer;
     }
 
+
+    /* About Section */
+    .about-col-1, .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        height: 400px;
+    }
+    .about-col-1 img {
+        position: relative;
+    }
+    #about {
+        padding: 500px 0;
+    }
+    
+    /* Background animation */
+    .background-animation {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1; /* Ensure background stays behind everything */
+    }
+
+    /* Container z-index */
+    .container {
+        position: relative;
+         z-index: 2;
+    }
+    
+    /* About section container */
+    #about {
+        position: relative;
+        z-index: 1;
+        background: rgba(8, 8, 8, 0.9); 
+    }
+
     .sub-title{
         font-size: 40px;
     }
 
-
+    /* Tabs */
     .tab-links{
         font-size: 16px;
         margin-right: 20px;
     }
 
-    .contact-left, .contact-right{
+     /* Contact Section */
+    .contact-left, .contact-right {
         flex-basis: 100%;
     }
 
+     /* Background Animation */
+     .background-animation::before {
+        opacity: 0.2;
+    }
+    .code-text {
+        font-size: 12px;
+    }
+
+     /* Container Padding */
+     .container {
+        padding: 10px 5%;
+    }
+}
+
+/* Additional media query for medium-sized screens */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+    .header-text {
+        margin-top: 30%;
+    }
+
+    .profile-image {
+        width: 350px;
+        height: 350px;
+    }
+
+    .text-content p {
+        font-size: 35px;
+    }
+
+    .text-content h1 {
+        font-size: 45px;
+    }
 }
 
